Fixed bug #70900 (SoapClient systematic out of memory error)